# contrib-practice

./: .codespellignore  .pre-commit-config.yaml  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
src/: __init__.py  math_utils.py
tasks/: 01-add-yourself.md  02-fix-style.md  03-add-tests.md  04-merge-conflict.md  05-merge-conflict-rebase.md  story.txt
tests/: test_math_utils.py
